<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4F5151"
    tools:context=".Songact">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/todo"
        android:rotation="0"
        android:rotationY="0"
        android:scaleType="fitXY"
        android:src="@drawable/blind"
        app:circularflow_angles="10dp"
        app:circularflow_defaultRadius="30dp"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bilind_ibrahim"
        android:textColor="#FAF8F8"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/were_peri"
        android:textColor="#FAF8F8"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/btnp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:onClick="play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stop"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/puse_b"
        app:srcCompat="@drawable/play"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/puse_b"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="40dp"
        android:onClick="pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pause"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/stop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="40dp"
        android:onClick="stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/refresh"
        tools:ignore="SpeakableTextPresentCheck" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="311dp"
        android:layout_height="37dp"
        android:backgroundTint="#B38C8C"
        app:layout_constraintBottom_toTopOf="@+id/btnp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>